5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1646_2728.log
== TEST (2019-05-20 09:49:37) 
-- CODE:
percurso = float(input("Insira o percurso: "))
tipo = input("Tipo do carro: ")
if(tipo == A):
	consumo = percurso/8
	print(round(consumo,2))
else:
	consumo = percurso/12
	print(round(consumo,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(tipo == A):
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 09:50:06) 
-- CODE:
percurso = float(input("Insira o percurso: "))
tipo = input("Tipo do carro: ")
if(tipo == "A"):
	consumo = percurso/8
	print(round(consumo,2))
else:
	consumo = percurso/12
	print(round(consumo,2))
-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 09:50:18) 
-- CODE:
percurso = float(input("Insira o percurso: "))
tipo = input("Tipo do carro: ")
if(tipo == "A"):
	consumo = percurso/8
	print(round(consumo,2))
else:
	consumo = percurso/12
	print(round(consumo,2))
-- EXECUTION TIME:
0.20937
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
